[package]
name = "extendr-engine"
version = "0.2.0"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Thomas Down",
    "Mossa Merhi Reimert <mossa@sund.ku.dk>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Hiroaki Yutani",
    "Ilia A. Kosenkov <ilia.kosenkov@outlook.com>"
]
edition = "2018"
description = "Safe and user friendly bindings to the R programming language."
license = "MIT"
repository = "https://github.com/extendr/extendr"

[dependencies]
libR-sys = { git = "https://github.com/extendr/libR-sys/" }

[features]
default = []

# All features to test
tests-all = ["libR-sys/use-bindgen"]
